<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_5sdp"

      >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_layout_grey"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="@dimen/_2sdp"
        android:orientation="horizontal">
        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_music_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="start"
            app:riv_corner_radius="@dimen/_15sdp"
            android:scaleType="fitXY" />
        <TextView
            android:id="@+id/fileName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/image"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:maxLines="1"
            android:ems="4"
            android:ellipsize="end"
            android:maxLength="30"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/file_namee"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
         />
        <TextView
            android:id="@+id/fileDuration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/image"
            app:layout_constraintTop_toBottomOf="@id/fileName"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:maxLines="1"
            android:text="@string/file_size"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            />
        <TextView
            android:id="@+id/fileSize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/fileName"
            android:layout_marginStart="@dimen/_20sdp"
            android:gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:maxLines="1"
            android:maxLength="20"
            android:text="@string/file_sizee"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>