<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/_10sdp"
    android:paddingTop="@dimen/_15sdp"
    android:paddingEnd="@dimen/_10sdp"
    android:orientation="vertical"
    android:paddingBottom="@dimen/_5sdp">

    <ImageView
        android:id="@+id/img_mir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_strat_mirror"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:paddingTop="@dimen/_20sdp"
        />
    <View
        android:id="@+id/view_green"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:background="@drawable/bakground_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_mir"
        android:layout_marginTop="@dimen/_22sdp"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_item_device_address_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:lineSpacingExtra="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_20sdp"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@id/img_mir"
        android:layout_marginTop="@dimen/_18sdp"
        app:layout_constraintStart_toEndOf="@id/view_green"
        android:layout_marginStart="@dimen/_50sdp"
        android:maxLines="2"
        android:textColor="@color/black"
        android:text="@string/tut_1" />
    <View
        android:id="@+id/view_red"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:background="@drawable/background_red_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_green"
        android:layout_marginTop="@dimen/_35sdp"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toEndOf="@id/view_red"
        android:layout_marginStart="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/tv_item_device_address_header"
        android:textColor="@color/black"
       android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/tut_2"
        />
    <View
        android:id="@+id/view_orange"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:background="@drawable/bakground_oranje_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_red"
        android:layout_marginTop="@dimen/_15sdp"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        app:layout_constraintTop_toBottomOf="@id/tv_second"
       app:layout_constraintStart_toEndOf="@id/view_orange"
        android:textSize="@dimen/_12sdp"
       android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:textColor="@color/black"
        android:lineSpacingExtra="@dimen/_5sdp"
        android:text="@string/tut_3"
        />
    <View
        android:id="@+id/view_purple"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:background="@drawable/background_purple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_orange"
        android:layout_marginTop="@dimen/_35sdp"
        />
   <androidx.appcompat.widget.AppCompatTextView
       android:id="@+id/tv_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toEndOf="@id/view_purple"
       app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
       android:layout_marginTop="@dimen/_10sdp"
       android:layout_marginStart="@dimen/_20sdp"
        android:lineSpacingExtra="@dimen/_5sdp"
       android:layout_marginEnd="@dimen/_20sdp"
       app:layout_constraintTop_toBottomOf="@id/tv_third"
        android:text="@string/ip_address_may_change"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rl_id"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:padding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/tv_change"
        android:background="@drawable/background_layout_grey"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_item_device_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="sans-serif-medium"
            android:freezesText="true"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            tools:text="http://192.168.300.234:8080" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/li_buttons"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        app:layout_constraintTop_toBottomOf="@id/rl_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/iv_item_device_address_share"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/share"
            app:layout_constraintTop_toBottomOf="@id/rl_id"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textSize="@dimen/_14sdp"
            android:drawablePadding="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@drawable/background_layout_grey"
            android:padding="@dimen/_10sdp"
            app:drawableStartCompat="@drawable/ic_share_black" />
        <TextView
            android:id="@+id/iv_item_device_address_copy"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/copy"
            app:layout_constraintTop_toBottomOf="@id/rl_id"
            android:layout_gravity="center"
            android:textSize="@dimen/_14sdp"
            android:padding="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:drawablePadding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:background="@drawable/background_layout_grey"
            android:layout_marginEnd="@dimen/_10sdp"
            app:drawableStartCompat="@drawable/ic_copy" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
