<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/img_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:src="@drawable/mirr_nav"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="@dimen/_20sdp"
        android:layout_margin="@dimen/_25sdp"/>

    <View
        android:id="@+id/lay_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/img_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/_20sdp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lay_view"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        >

    <LinearLayout
        android:id="@+id/li_shareAp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/_5sdp"
        android:background="@drawable/ripple_efect_background"
        android:layout_marginTop="@dimen/_10sdp"
        >
        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:src="@drawable/ic_shareapp_"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_20sdp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_app"
            android:layout_gravity="center"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginStart="@dimen/_20sdp"
            android:textColor="@color/black"
            />
    </LinearLayout>
        <LinearLayout
            android:id="@+id/li_rateus"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp"
            android:background="@drawable/ripple_efect_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <ImageView
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:src="@drawable/ic_rate_us"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_20sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_us"
                android:layout_gravity="center"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/poppins_semibold"
                android:layout_marginStart="@dimen/_20sdp"
                android:textColor="@color/black"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/li_howTo_use"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp"
            android:background="@drawable/ripple_efect_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <ImageView
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:src="@drawable/ic_how_to_use"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_20sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_to_use"
                android:layout_gravity="center"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/poppins_semibold"
                android:layout_marginStart="@dimen/_20sdp"
                android:textColor="@color/black"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/li_moreApps"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp"
            android:background="@drawable/ripple_efect_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <ImageView
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:src="@drawable/ic_more_apps"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_20sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_apps"
                android:layout_gravity="center"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/poppins_semibold"
                android:layout_marginStart="@dimen/_20sdp"
                android:textColor="@color/black"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/li_privacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp"
            android:background="@drawable/ripple_efect_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            >
            <ImageView
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:src="@drawable/ic_privacy_policy"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_20sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:layout_gravity="center"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/poppins_semibold"
                android:layout_marginStart="@dimen/_20sdp"
                android:textColor="@color/black"
                />
        </LinearLayout>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>